--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-#cryptography==3.4.7
+cryptography==3.4.7
 Flask==2.0.3
 Flask_RESTful==0.3.9
 Jinja2==3.0.2
 jinjasql==0.1.8
 pandas==1.0.1
 psycopg2==2.7.7
+setuptools_rust==1.5.1
