--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [tool:pytest]
-addopts= --cov=. --cov-fail-under=90 tests/ -p no:warnings
+addopts= --cov=. --cov-fail-under=90 test/ -p no:warnings
 python_files=test_*.py
 
 [aliases]
